--- a/week6/day5/onshop/app/views/layouts/application.html.erb
+++ b/week6/day5/onshop/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <div class='row'>
     <div class='col-md-12'>
       <header>
-        <h1>OnShip<small>"Buy our Robots"</small></h1>
+        <h1><%= link_to 'OnShip', root_path %><small>"Buy our Robots"</small></h1>
         <nav>
           <ul>
             <li><%= link_to('Items', items_path) %></li>
