--- a/week6/day5/onshop/app/views/layouts/application.html.erb
+++ b/week6/day5/onshop/app/views/layouts/application.html.erb
@@ -15,11 +15,28 @@
         <nav>
           <ul>
             <li><%= link_to('Items', items_path) %></li>
+            <% if user_logged_in? %>
+              <li><%= link_to('Your Account', user_path(current_user)) %></li>
+              <li><%= link_to('Logout', logout_path, method: :DELETE) %></li>
+            <% else %>
+              <li><%= link_to('Create Account', new_user_path) %></li>
+            <% end %>
           </ul>
         </nav>
       </header>
-      <p class="notice"><%= notice %></p>
-      <p class='alert'><%= alert %></p>
+      <p><!-- Don't add an empty p tag for spacing like this --></p>
+      <% if notice %>
+        <div class="alert alert-warning alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <p class="notice"><%= notice %></p>
+        </div>
+      <% end %>
+      <% if alert %>
+        <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <p class="alert"><%= alert %></p>
+        </div>
+      <% end %>
     </div>
   </div>
   <div class='row'>
