--- a/week7/day5/react-chat/app/assets/stylesheets/application.scss
+++ b/week7/day5/react-chat/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@ html, body, main, .messages {
   background: white;
   border-bottom: 1px solid gray;
   min-height: 100%;
-  height: 800px
+  height: 800px;
   overflow-y: scroll;
   > .message {
     padding: 15px 20px;
