--- a/week7/day5/react-chat/app/views/layouts/application.html.erb
+++ b/week7/day5/react-chat/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           <li><%= link_to('All Rooms', rooms_path) %></li>
           <li><%= link_to('All Users', users_path) %></li>
           <% if user_logged_in? %>
-            <li><%= link_to('Logout', logout_path) %></li>
+            <li><%= link_to('Logout', logout_path, method: :DELETE) %></li>
           <% else %>
             <li><%= link_to('Login', login_path) %></li>
             <li><%= link_to('Sign up', new_user_path) %></li>
@@ -26,7 +26,7 @@
           <li><%= link_to('All Rooms', rooms_path) %></li>
           <li><%= link_to('All Users', users_path) %></li>
           <% if user_logged_in? %>
-            <li><%= link_to('Logout', logout_path, method: :delete) %></li>
+            <li><%= link_to('Logout', logout_path, method: :DELETE) %></li>
           <% else %>
             <li><%= link_to('Login', login_path) %></li>
             <li><%= link_to('Sign up', new_user_path) %></li>
